--- a/about.html
+++ b/about.html
@@ -138,18 +138,31 @@
 				</div>
 			</div>
 		</div> -->
-		<footer id="colorlib-footer" class="something" role="contentinfo">
-				<div class="row">
-					<div class="col-md-12">
-						<p>
-							<small class="block">
-								<p style="text-align: center;color:white;">Copyright &copy;<script>document.write(new Date().getFullYear());</script> Believers' LoveWorld Campus Ministry Zone G</p>
-
-						</p>
+		<footer style="background-color: black;" class="colorlib-footer" role="contentinfo">
+			<div class="container">
+				<div class="row row-pb-md">
+					<!-- <div class="col-md-3"> -->
+						<!-- <nav>
+							<ul>
+									<li><a href="blog.html">Zone G creatives</a></li>
+									<li><a href="travel.html">Except</a></li>
+									<li><a href="about.html">About Me</a></li>
+									<li><a href="contact.html">Prayer of Salvation</a></li>
+								</ul>
+							</nav> -->
+						<!-- </div> -->
 					</div>
-				</div>
-			
+					</div>
+					<!--  -->
+				<!-- <hr style="width:800px;background-color: white;"> -->
+				
+					<p style="text-align: center;color:white;">Copyright &copy;<script>document.write(new Date().getFullYear());</script> Believers' LoveWorld Campus Ministry Zone G</p>
+				
+					<div class="gototop js-top">
+						<a href="#" class="js-gotop"><i class="icon-arrow-up2"></i></a>
+					</div>
 		</footer>
+	
 	
 
 	<div class="gototop js-top">
