--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<body>
 
 	<nav class="navbar sticky-top navbar-expand-md">
-		<a class="navbar-brand" href="index.html"><img src="./images/zoneg.png"  alt="zoneg-logo"/></a>
+		<a class="navbar-brand" href="index.html"><img src="./images/zoneg.png" width="200px" height="100px"  alt="zoneg-logo"/></a>
 		<button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#main-navigation" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
